fix spacing & add more members

--- a/zola/static/style/members.css
+++ b/zola/static/style/members.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 2rem;
+    padding-left: 2rem;
 }
 
 .person {
     width: calc(50% - 4rem);
-    margin: 1rem;
     background-color: #212028;
     border-radius: 12px;
 
@@ -65,4 +66,5 @@
 
 .person .blurb {
     font-size: 1.4rem;
+    margin-bottom: 1rem;
 }
